--- a/app/views/musicians/show.html.erb
+++ b/app/views/musicians/show.html.erb
@@ -36,16 +36,18 @@ Description:<br />
 
     <% end %>
 
-    <% if current_musician.approvals.count > 0 %>
+    <% if current_musician.approvals.where(approved: false).count > 0 %>
 
       <h1>Membership Pending Approval</h1><br />
 
       <% current_musician.approvals.each do |approval|%>
-        Band:  <%= approval.band.name %><br />
-        Position:  <%= approval.member.position.description %><br />
-        Approved:  <%= approval.approved %>
-        <%= button_to 'View Band', band_path(approval.band.id), :method => :get %><br />
 
+        <% if approval.approved == false %>
+          Band:  <%= approval.band.name %><br />
+          Position:  <%= approval.member.position.description %><br />
+          Approved:  <%= approval.approved %>
+          <%= button_to 'View Band', band_path(approval.band.id), :method => :get %><br />
+        <% end %>
       <% end %>
 
     <% end %>
